# coin3d

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_modern.txt  COIN_MIGRATION_PLAN.md  COVERAGE.md  Coin.pc.cmake.in  Complex3DText.rgb  FBO_IMPLEMENTATION.md  HelloCone.rgb  IMPLEMENTATION_SUMMARY.md  INSTALL  MIGRATION_SUMMARY.md  OSMESA_FBO_FIX_DOCUMENTATION.cpp  OSMESA_INTEGRATION.md  PLATFORM_CLEANUP_SUMMARY.md  README.md  SCENE_RENDERING_ANALYSIS.md  STORAGE_MIGRATION_ANALYSIS.md  Simple3DText.rgb  TESTING.md  THREADING_MIGRATION.md  Text2D.rgb  VALIDATION_SUMMARY.md  backend_possibilities.txt  build_warnings.txt  build_warnings_after_fixes.txt  complete_migration.sh  crash_test_2.rgb  crash_test_3.rgb  debug_osmesa_functions.sh  demo_storage_enhancement.sh  deprecated_context_test  final_build_check.txt  final_complete_build.txt  final_test_3.rgb  full_output.txt  gl_glx.cpp  iostream_texture_demo  iostream_texture_demo.cpp  (+27 more)
Mentor/: 02.1.HelloCone.headless.cpp.in  02.4.Examiner.cpp  03.1.Molecule.headless.cpp.in  05.1.FaceSet.headless.cpp.in  05.5.Binding.cpp  06.1.Text.headless.cpp.in  06.2.Simple3DText.headless.cpp.in  06.3.Complex3DText.headless.cpp.in  07.1.BasicTexture.headless.cpp.in  08.2.UniCurve.cpp  08.3.BezSurf.cpp  08.4.TrimSurf.cpp  09.2.Texture.cpp  10.5.SelectionCB.cpp  10.6.PickFilterTopLevel.cpp  10.7.PickFilterManip.cpp  10.8.PickFilterNodeKit.cpp  11.1.ReadFile.cpp  11.2.ReadString.headless.cpp.in  12.3.AlarmSensor.cpp  13.1.GlobalFlds.cpp  13.6.Calculator.headless.cpp.in  13.8.Blinker.cpp  14.2.Editors.cpp  15.3.AttachManip.cpp  16.2.Callback.cpp  16.3.AttachEditor.cpp  17.2.GLCallback.cpp  CMakeLists.txt  README.md  TESTING_GUIDE.md  generate_control_images.sh  headless_utils.h  image_comparator.cpp  mock_gui_toolkit.h  run_image_test.cmake
Mentor/data/: globe.rgb
src/: CMakeLists.txt  CoinPCH.h  CoinTidbits.cpp  CoinTidbits.h  CoinTidbits.inl  SuInternal.h  coindefs.h  config.h.cmake.in  setup.h.cmake.in  tidbits.cpp  tidbitsp.h
src/C/: CoinTidbits.cpp  CoinTidbits.h  CoinTidbits.h.backup  basic.h  basic.h.in  tidbits.h
src/actions/: CMakeLists.txt  SoAction.cpp  SoActionP.cpp  SoActionP.h  SoAudioRenderAction.cpp  SoCallbackAction.cpp  SoGLRenderAction.cpp  SoReorganizeAction.cpp  SoSearchAction.cpp  SoSubActionP.h  SoWriteAction.cpp
src/base/: CMakeLists.txt  CoinBasic.h  SbBSPTree.cpp  SbBox2d.cpp  SbBox2f.cpp  SbBox2i32.cpp  SbBox2s.cpp  SbBox3d.cpp  SbBox3f.cpp  SbBox3i32.cpp  SbBox3s.cpp  SbByteBuffer.cpp  SbByteBuffer.cpp.test_backup  SbDPMatrix.cpp  SbDPPlane.cpp  SbDPRotation.cpp  SbDPViewVolume.cpp  SbDict.cpp  SbFont.cpp  SbGLUTessellator.cpp  SbImage.cpp  SbImageCompat.cpp  SbImageCompat.h  SbImageFormatHandler.cpp  SbImageFormatHandler.h  SbImageResize.cpp  SbImageResize.h  SbJpegImageHandler.cpp  SbJpegImageHandler.h  SbMatrix.cpp  SbMatrix.cpp.test_backup  SbName.cpp  SbPlane.cpp  SbRotation.cpp  SbString.cpp  SbTesselator.cpp  SbTime.cpp  SbUtf8.cpp  SbVec2d.cpp  SbVec2f.cpp  (+23 more)
src/caches/: SoBoundingBoxCache.cpp  SoCache.cpp  SoConvexDataCache.cpp  SoConvexDataCacheEarcutTessellator.h  SoConvexDataCacheGLU.h  SoConvexDataCacheTessellator.h  SoGLCacheList.cpp  SoGLRenderCache.cpp  SoGlyphCache.cpp  SoGlyphCache.h  SoNormalCache.cpp  SoPrimitiveVertexCache.cpp  SoShaderProgramCache.cpp
src/collision/: SoIntersectionDetectionAction.cpp
src/details/: CMakeLists.txt  SoNodeKitDetail.cpp
src/doc/: CMakeLists.txt
src/draggers/: CMakeLists.txt  SoCenterballDragger.cpp  SoDirectionalLightDragger.cpp  SoDragPointDragger.cpp  SoDragger.cpp  SoHandleBoxDragger.cpp  SoJackDragger.cpp  SoPointLightDragger.cpp  SoRotateCylindricalDragger.cpp  SoRotateDiscDragger.cpp  SoRotateSphericalDragger.cpp  SoScale1Dragger.cpp  SoScale2Dragger.cpp  SoScale2UniformDragger.cpp  SoScaleUniformDragger.cpp  SoSpotLightDragger.cpp  SoTabBoxDragger.cpp  SoTabPlaneDragger.cpp  SoTrackballDragger.cpp  SoTransformBoxDragger.cpp  SoTransformerDragger.cpp  SoTranslate1Dragger.cpp  SoTranslate2Dragger.cpp
src/elements/: CMakeLists.txt  SoBumpMapCoordinateElement.cpp  SoCacheElement.cpp  SoCoordinateElement.cpp  SoElement.cpp  SoFontNameElement.cpp  SoLazyElement.cpp  SoLightAttenuationElement.cpp  SoListenerPositionElement.cpp  SoOverrideElement.cpp  SoProfileCoordinateElement.cpp  SoSoundElement.cpp  SoTextureCombineElement.cpp  SoVertexAttributeElement.cpp
src/engines/: CMakeLists.txt  SoConvertAll.cpp  SoEngine.cpp  SoHeightMapToNormalMap.cpp  SoSubEngineP.h  SoSubNodeEngineP.h  all-engines-cpp.cpp  evaluator.cpp  evaluator_tab.cpp  so_eval.ic
src/errors/: CoinDebugError.cpp  CoinDebugError.h  CoinInternalError.h  SoDebugError.cpp  SoError.cpp  debugerror.cpp  error.cpp
src/events/: SoEvent.cpp  SoKeyboardEvent.cpp
src/fields/: SoField.cpp  SoFieldContainer.cpp  SoGlobalField.cpp  SoMFBitMask.cpp  SoMFBool.cpp  SoMFColor.cpp  SoMFColorRGBA.cpp  SoMFDouble.cpp  SoMFEngine.cpp  SoMFEnum.cpp  SoMFFloat.cpp  SoMFInt32.cpp  SoMFMatrix.cpp  SoMFName.cpp  SoMFNode.cpp  SoMFPath.cpp  SoMFPlane.cpp  SoMFRotation.cpp  SoMFShort.cpp  SoMFString.cpp  SoMFTime.cpp  SoMFUInt32.cpp  SoMFUShort.cpp  SoMFVec2b.cpp  SoMFVec2d.cpp  SoMFVec2f.cpp  SoMFVec2i32.cpp  SoMFVec2s.cpp  (+66 more)
tests/: CMakeLists.txt  comprehensive_context_demo.cpp  context_api_integration_test.cpp  deprecated_context_test.cpp  enhanced_offscreen_test.cpp  fbo_demo.cmake  fbo_demo.cpp  fbo_demonstration_test.cpp  generate_control_images.sh  main.cpp  offscreen_rendering_test.cpp  osmesa_context_test.cpp  osmesa_context_test_new.cpp  osmesa_context_test_old.cpp  run_image_test.cmake  test_comprehensive.cpp  test_coordinate_debug.cpp  test_events.cpp  test_fields.cpp  test_gradient_debug.cpp  test_legacy_integration.cpp  test_osmesa_fbo_detection.cpp  test_scene_rendering.cpp  test_simple_debug.cpp  test_sphere_positioning.cpp  test_template.cpp  test_texture_checkerboard.cpp  test_utils.cpp  test_utils.h
tests_modern/: CMakeLists.txt
testsuite/: CMakeLists.txt  CoinTestFramework.h  StandardTests.cpp  TestSuiteMain.cpp  TestSuiteMisc.h  TestSuiteUtils.cpp
tmp_builds/: CMakeLists.txt
(+701 files in other folders)
